# Golgari-Tongue

./: .gitignore  AST.cpp  CMakeLists.txt  GTConfig.h.in  Hello, World!_in_ASCII_and_base_5.txt  Hello, World!_in_utf-16_and_base_6.txt  README.md  hello_world.gt  lexer.cpp
design_ideas/: design.txt  to_do_list.txt
header/: AST.h  driver.h  lexer.h  parser.h
impl/: driver.cpp  example.txt  lexer.cpp  parser.cpp
test/: hello_world_cut.gt
